<resources>
    <string name="manage_content">您还未连接任何智能笔,开启连接，开启笔迹之旅。</string>
    <string name="my_note">我的笔迹</string>
    <string name="file_list">文件列表</string>
    <string name="about_note">关于云享笔迹</string>
    <string name="my_collect">我的收藏</string>
    <string name="edit_sort">编辑分类</string>
    <string name="clear_collect">清空收藏</string>
    <string name="add_sort">新建分类</string>
    <string name="fileName">文件夹</string>
    <string name="fileType">文件类型</string>
    <string name="fileClass">文件分类</string>
    <string name="handwriting_pressure">笔记压感</string>
    <string name="openPen">开启笔记</string>
    <string name="edit">请输入</string>
    <string name="select">请选择</string>
    <string name="painting">绘画/笔迹</string>
    <string name="micro_class">微课</string>
    <string name="new_class">新建分类</string>
    <string name="sureClearCollect">确定要清空当前所有收藏？</string>
    <string name="sure">确定</string>
    <string name="kindlyReminder">温馨提示</string>
    <string name="shareTo">分享至</string>
    <string name="shareWx">微信</string>
    <string name="shareQQ">QQ</string>
    <string name="shareFriend">朋友圈</string>
    <string name="addSort">新建分类</string>
    <string name="inputSortName">输入分类名</string>
    <string name="cancel">取消</string>
    <string name="editData">编辑</string>
    <string name="allChecked">全选</string>
    <string name="delete">删除</string>
    <string name="sureDeleteFile">确定要删除当前文件吗?</string>
</resources>
