<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bg"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/shareTo"
            android:textColor="@color/color_333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/icon_note_close" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/shareWx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_share_friend"
            android:gravity="center_horizontal"
            android:text="@string/shareWx"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/shareQQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_share_qq"
            android:gravity="center_horizontal"
            android:text="@string/shareQQ"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/shareFriend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/icon_share_friend"
            android:gravity="center_horizontal"
            android:text="@string/shareFriend"
            android:textColor="@color/color_333333"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>
