<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_efeff3"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <RelativeLayout
        android:id="@+id/fileList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/my_note_list_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_my_note_file_list"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/file_list"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/myCollect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_note_list_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_my_note_collect"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/my_collect"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aboutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/my_note_list_bg"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_my_note_about_pen"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/about_note"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow" />

    </RelativeLayout>
</LinearLayout>
